Edit and submit data